--- a/_posts/2012-12-23-7-run-tests.md
+++ b/_posts/2012-12-23-7-run-tests.md
@@ -12,14 +12,10 @@ This assumes the build is in the directory created by the script (avs-sdk).
 
 1. Go to the terminal window, and run the following steps.
 
-`
-UNIT_TEST_MODEL_PATH="$HOME/avs-sdk/avs-device-sdk/KWD/inputs/SensoryModels"
-TEST_MODEL_DOWNLOAD="https://github.com/Sensory/alexa-rpi/blob/master/models/spot-alexa-rpi-31000.snsr"
-mkdir -p "UNIT_TEST_MODEL_PATH"
-wget -O "$UNIT_TEST_MODEL_PATH/spot-alexa-rpi-31000.snsr" "$TEST_MODEL_DOWNLOAD"
-cd "$HOME/avs-sdk/build"
+```sh
+cd $HOME/sdk-folder/sdk-build/
 make all test -j3
-`
+```
 
 {:.steps}
 #### Integration Tests (optional)
