--- a/_posts/2012-12-23-7-run-tests.md
+++ b/_posts/2012-12-23-7-run-tests.md
@@ -10,17 +10,19 @@ This assumes the build is in the directory created by the script (avs-sdk).
 
 #### Unit Tests
 
-1. Go to the terminal window, and run the following steps.
+Go to the terminal window, and run the following steps.
 
-```sh
-cd $HOME/sdk-folder/sdk-build/
+`cd $HOME/sdk-folder/sdk-build/
 make all test -j3
-```
+`
 
 {:.steps}
 #### Integration Tests (optional)
 
-Integration tests will take some time to build and run. If the presentation hasn't re-started, then you can move onto this step. Otherwise you can return later and try it out!
+Integration tests will take some time to build and run. If the presentation 
+hasn't re-started, then you can move onto this step. Otherwise you can return 
+later and try it out!
 
-1. From the build directory, run 
+From the build directory, run:
+
 `TZ=UTC make all integration`
