Define directories for saving files.

--- a/_posts/2019-04-29-11-create-IoT.md
+++ b/_posts/2019-04-29-11-create-IoT.md
@@ -23,7 +23,7 @@ Then scroll down and click on the blue button **"Next"** leaving everything else
 ![alt text](/assets/40 - Continue creating Thing.png)     
 Click the top blue button **"Create certificate"**. You will see the following window:
 ![alt text](/assets/41 - Creating new certificate.png)      
-Now, be very careful. You need to download and save these three files somewhere on your Raspberry Pi. Create a folder *"certificates"* (as an example) and save files there. In the same folder create the new file and call it *"root-ca.crt"*. Click on the link at the **"A root CA for AWS IoT Download"**. You will get a choice of different certificates - this is up to you, but for the purposes of this tutorial, select the first one, **"RSA 2048 bit key"**.  You will then see the certificate content:
+Now, be very careful. You need to download and save these three files on your Raspberry Pi. Create a folder *"/home/pi/iot"* and save files there. In the same folder create the new file and call it *"root-ca.crt"*. Click on the link at the **"A root CA for AWS IoT Download"**. You will get a choice of different certificates - this is up to you, but for the purposes of this tutorial, select the first one, **"RSA 2048 bit key"**.  You will then see the certificate content:
 ![alt text](/assets/42 - Root certificate content.png)   
 Copy it and paste into *root-ca.crt* file you've created. Then return to the previous page. These files will be used to identify and securely connect to your IoT thing, in our case Raspberry Pi.
 Click on the blue button **"Activate"**. And then **"Attach a policy"**. In the next page it will warn you that there are no policies in your account. So, click on the button **"Register Thing"**, we will create and attach a policy later.
