Adjust root CA instructions and file.

--- a/_posts/2019-04-28-11-create-IoT.md
+++ b/_posts/2019-04-28-11-create-IoT.md
@@ -23,7 +23,7 @@ Then scroll down and click on the blue button **"Next"** leaving everything else
 ![alt text](/assets/40 - Continue creating Thing.png)     
 Click the top blue button **"Create certificate"**. You will see the following window:
 ![alt text](/assets/41 - Creating new certificate.png)      
-Now, be very careful. You need to download and save these three files in the *"/home/pi/iot"* on your Raspberry Pi. These files will be used to identify and securely connect to your IoT thing, in our case Raspberry Pi. In this folder is also a pre-installed file called *"root-ca.crt"*. This is a certificate file used to validate the security of the connection to the AWS IoT service.
+Now, be very careful. You need to download and save these three files in the *"/home/pi/iot"* on your Raspberry Pi. These files will be used to identify and securely connect to your IoT thing, in our case Raspberry Pi. In this folder is also a pre-installed file called *"root-ca.pem.crt"*. This is a certificate bundle used to validate the security of the connection to the AWS IoT service and other Internet destinations.
 Click on the blue button **"Activate"**. And then **"Attach a policy"**. In the next page it will warn you that there are no policies in your account. So, click on the button **"Register Thing"**, we will create and attach a policy later.
 ![alt text](/assets/43 - Registering Thing.png) 
 You will see the created thing:
